--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 
     <title>CSS Art - Lynn Wolters</title>
 
+    <script defer src="js/libraries/circletype.min.js"></script>
+    <script defer src="js/button-selected.js"></script>
+    <script defer src="js/gebogen-tekst.js"></script>
+    <script defer src="js/gebogen-tekst-2.js"></script>
+    <script defer src="js/gebogen-tekst-3.js"></script>
+    <script defer src="js/gebogen-tekst-4.js"></script>
+    <script defer src="js/muzieknoten.js"></script>
+    <script defer src="js/ogen.js"></script>
+    <script defer src="js/move-it.js"></script>
+    <script defer src="js/schaduw.js"></script>
+
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
     <link rel="stylesheet" type="text/css" media="screen" href="css/mp3-player.css">
     <link rel="stylesheet" type="text/css" media="screen" href="css/radio-recorder.css">
@@ -32,7 +43,7 @@
 
     <!-- MP3 Player -->
 
-    <div class="wrapper-mp3-player slide-in ding">
+    <div class="wrapper-mp3-player ding">
         <div class="container-mp3-player bounce">
             <div class="lichaam">
                 <div class="boven-knop"></div>
@@ -64,12 +75,12 @@
                 </div>
             </div>
         </div>
-        <div id="eerste-titel">MP3 Player</div>
+        <div id="titel-een">MP3 Player</div>
     </div>
 
     <!-- Radio Recorder -->
 
-    <div class="wrapper-radio-recorder slide-in ding">
+    <div class="wrapper-radio-recorder ding">
         <div class="container-radio-recorder bounce">
             <div class="lichaam">
                 <div class="handvat"></div>
@@ -115,12 +126,12 @@
                 </div>
             </div>
         </div>
-        <div id="tweede-titel">Radio Recorder</div>
+        <div id="titel-twee">Radio Recorder</div>
     </div>
 
     <!-- Cassette -->
 
-    <div class="wrapper-cassette slide-in ding">
+    <div class="wrapper-cassette ding">
         <div class="container-cassette bounce">
             <div class="lichaam">
                 <div class="schroeven">
@@ -161,12 +172,12 @@
                 </div>
             </div>
         </div>
-        <div id="derde-titel">Cassette</div>
+        <div id="titel-drie">Cassette</div>
     </div>
 
     <!-- Vinyl Record -->
 
-    <div class="wrapper-vinyl-record slide-in ding">
+    <div class="wrapper-vinyl-record ding">
         <div class="container-vinyl-record bounce">
             <div class="lichaam">
                 <div class="ogen">
@@ -194,44 +205,34 @@
                 </div>
             </div>
         </div>
-        <div id="vierde-titel">Vinyl Record</div>
+        <div id="titel-vier">Vinyl Record</div>
     </div>
 
-    <!-- Schaduw -->
+    <!-- Schaduw-->
 
     <div class="schaduw"></div>
 
-        <!-- Muzieknoten -->
+    <!-- Muzieknoten -->
 
-        <ul class="muzieknoot-container">
-            <li class="muzieknoot" style="--x:20; --y:-40; --t:.8;"></li>
-            <li class="muzieknoot" style="--x:30; --y:20; --t:1"></li>
-            <li class="muzieknoot" style="--x:20; --y:-10; --t:.5"></li>
-            <li class="muzieknoot" style="--x:-10; --y:--20; --t:.8;"></li>
-            <li class="muzieknoot" style="--x:-20; --y:-30; --t:.8;"></li>
-            <li class="muzieknoot" style="--x:40; --y:-0; --t:.6;"></li>
-            <li class="muzieknoot" style="--x:-25; --y:-10; --t:.8;"></li>
-            <li class="muzieknoot" style="--x:-40; --y:-40; --t:.4;"></li>
-            <li class="muzieknoot" style="--x:-30; --y:20; --t:.8;"></li>
-            <li class="muzieknoot" style="--x:10; --y:10; --t:.4;"></li>
-            <li class="muzieknoot" style="--x:-10; --y:40; --t:.8;"></li>
-        </ul>
+    <ul class="muzieknoot-container">
+        <li class="muzieknoot" style="--x:20; --y:-40; --t:.8;"></li>
+        <li class="muzieknoot" style="--x:30; --y:20; --t:1"></li>
+        <li class="muzieknoot" style="--x:20; --y:-10; --t:.5"></li>
+        <li class="muzieknoot" style="--x:-10; --y:--20; --t:.8;"></li>
+        <li class="muzieknoot" style="--x:-20; --y:-30; --t:.8;"></li>
+        <li class="muzieknoot" style="--x:40; --y:-0; --t:.6;"></li>
+        <li class="muzieknoot" style="--x:-25; --y:-10; --t:.8;"></li>
+        <li class="muzieknoot" style="--x:-40; --y:-40; --t:.4;"></li>
+        <li class="muzieknoot" style="--x:-30; --y:20; --t:.8;"></li>
+        <li class="muzieknoot" style="--x:10; --y:10; --t:.4;"></li>
+        <li class="muzieknoot" style="--x:-10; --y:40; --t:.8;"></li>
+    </ul>
 
     <!-- Footer -->
 
     <footer>
         <button id="muzieknoot-button">🎵 Click me!</button>
     </footer>
-
-    <script src="js/libraries/circletype.min.js"></script>
-    <script src="js/gebogen-tekst.js"></script>
-    <script src="js/gebogen-tekst-2.js"></script>
-    <script src="js/gebogen-tekst-3.js"></script>
-    <script src="js/gebogen-tekst-4.js"></script>
-    <script src="js/muzieknoten.js"></script>
-    <script src="js/ogen.js"></script>
-    <script src="js/move-it.js"></script>
-    <script src="js/schaduw.js"></script>
 
 </body>
 
